<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Insetos em Ordem</string><string name="title">Insetos em Ordem</string>
    <string name="titleInfo">Information about application</string>
    <string name="agree">AGREE</string>
    <string name="option_a">option a</string>
    <string name="option_b">option b</string>
    <string name="identification">Identificação</string>
    <string name="my_insects">Meus Insetos</string>
    <string name="credits">Créditos</string>
    <string name="Privacy_Policy">PRIVACY POLICY</string>

    <string name="Privacy_Policy_INFO">
        <![CDATA[<div style="text-align: justify;">
        <h1>PRIVACY POLICY</h1>
		<p>The Municipality of Figueira de Castelo Rodrigo and, in particular, the Open Science Platform (PCA-MFCR) project are responsible for the site online <a href="https://www.plataforma.edu.pt/"> plataforma.edu.pt</a> and, therefore, undertake to guarantee the privacy of the personal data collected and / or transmitted online.</p>
		<ol>
		  <li>What information is collected?</li>
		  <li>Who is responsible for collecting information?</li>
		  <li>How is the information collected used?</li>
		</ol>
		<p>If you have any questions, please contact us at info@plataforma.edu.pt.</p>
		</div>]]>
    </string>

    <string name="Privacy_Policy_INFO_MAIN">The Municipality of Figueira de Castelo Rodrigo and the Open Science Platform (PCA-MFCR) project are responsible for the site platform.edu.pt and guarantee the privacy of personal data collected online.\n\nBelow you will find specific information:\n\n1) What information is collected?\n2) Who is responsible for collecting information?\n3) How is the information used?\n\nIf you have any questions, please contact us at info@plataforma.edu.pt.</string>

    <string name="Info_About_APP">
         <![CDATA[<div style="text-align: justify;">
                <h2>How to use this application</h2>
        <p>The purpose of this application is to make known the diversity of insects through the identification experience. It is intended to be a useful tool to identify an insect.</p>
        <p>To start, you have to be absolutely certain that you are facing an insect: division of the body into three parts (head, thorax, abdomen), six legs and wings.</p>
        </div>]]>
    </string>

    <string name="getStarted">GET STARTED</string>
    <string name="next">NEXT</string>
    <string name="skip">Skip</string>
    <string name="save">Save</string>
    <string name="coordinates">Location:</string>
    <string name="order">Order:</string>
    <string name="date">Date/Hour:</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="load_picture">Upload photo from gallery</string>
    <string name="save_and_quit">Save on my insects</string>
    <string name="quit_without_saving">Exit without Saving</string>
    <string name="close">Close</string>
    <string name="tutor">Tutor Teacher:</string>
    <string name="special_thanks">Thanks:</string>
    <string name="credits_book">Esta aplicação foi desenvolvida tendo por base a exposição \"Insetos em Ordem.\"</string>
    <string name="no_image_picked">You haven\'t picked an Image</string>
    <string name="io_exception">Something went wrong</string>
    <string name="no_coords">The image does not contain coordinates. Using your current location and date.</string>
    <string name="coords_found">Image metadata detected. Extracting coordinates and date.</string>
    <string name="emailAddress">info@plataforma.edu.pt</string>
    <string name="send_email">Submit sighting</string>
    <string name="emailBody">I know the privacy policy and give full consent to use the information sent. plataforma.edu.pt\n</string>
    <string name="email_order_label">Taxonomic order:</string>
    <string name="email_suborder_label">Suborder/Group:</string>
    <string name="email_classification_label">Full classification:</string>
    <string name="email_description_label">Insect description:</string>
    <string name="not_specified">Not specified</string>
    <string name="emailSubject">My insect</string>
    <string name="correct_order">Correct insect order</string>
    <string name="delete_insect">Delete insect</string>
    <string name="cancel">Cancel</string>
    <string name="moreinfo">More information</string>
    <string name="moreinfotext">Order</string>
    <string name="developer_time">Application developed by:</string>
    <string name="developers">Developers</string>
    <string name="developer_names">João Barros - IP Beja\nJosé Rodrigues - IP Beja\nJosé Varela - PCA\nNuno Marques - IP Beja\nVasco Flores - IP Beja\nEster A. Caetano - IP Beja</string>
    <string name="reviewer">Reviewers</string>
    <string name="reviewer_name">Ana Peso - PCA\nMaria Vicente - PCA\nPaulo Jorge Lourenço - PCA </string>
    <string name="designer">Designer</string>
    <string name="designer_name">Aneta Margraf-Druc - OSH</string>
    <string name="contents">Contents</string>
    <string name="contents_name">Eva Monteiro\nPatrícia Garcia Pereira</string>
    <string name="version">Beta Version - July 2018</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="confirm_map">CONFIRM</string>
</resources>