<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="pt.ipbeja.pi.piproject.identificationInsect.Classificacao">

    <!-- Question Text -->
    <TextView
        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:minHeight="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#7475ff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageOptionA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.9"
        tools:text="Question Text" />

    <!-- Option A -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageOptionA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:onClick="onImageAClick"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/optionA"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        app:layout_constraintWidth_percent="0.8"
        app:riv_corner_radius="15dp"
        app:srcCompat="@mipmap/pending_photo" />

    <Button
        android:id="@+id/optionA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonstyle1"
        android:onClick="onOptionAClick"
        android:text="@string/option_a"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageOptionB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageOptionA"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Option B -->
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageOptionB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        android:onClick="onImageBClick"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/optionB"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionA"
        app:layout_constraintWidth_percent="0.8"
        app:riv_corner_radius="15dp"
        app:srcCompat="@mipmap/pending_photo" />

    <Button
        android:id="@+id/optionB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/buttonstyle1"
        android:onClick="onOptionBClick"
        android:text="@string/option_b"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageOptionB"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Navigation Buttons -->
    <Button
        android:id="@+id/button7"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_keyboard_return_black_24dp"
        android:contentDescription="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_home_black_24dp"
        android:contentDescription="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>